--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font form Slamendo -->
+    <link href="https://fonts.googleapis.com/css?family=Flamenco" rel="stylesheet">
+  
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
+
+
+
+
+
+
+
+
